--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: sans-serif;
+  color: #333;
+}
+
+.steps {
+  margin: 100px auto;
+  padding: 25px 100px;
+  background-color: #f7f7f7;
+  border-radius: 7px;
+  width: 600px;
+}
+
+.numbers {
+  display: flex;
+  justify-content: space-between;
+}
+
+.numbers div {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+}
+
+.numbers div.active {
+  background-color: #7950f2;
+  color: #ffffff;
+}
+
+.message {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons button {
+  font-size: 14px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #7950f2;
+  padding: 10px 15px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.close {
+  margin: 40px 0px 0px 95%;
+  border: none;
+  background-color: transparent;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #7950f2;
+  font-size: 32px;
 }
